# innernet

./: README.md
client/: Cargo.toml
client/src/: lib.rs  main.rs
doc/: innernet-server.8  innernet.8
netlink-request/: Cargo.toml
server/: Cargo.toml
server/src/: error.rs  lib.rs  test.rs  util.rs
server/src/api/: mod.rs  user.rs
server/src/db/: association.rs  cidr.rs  mod.rs  peer.rs
shared/: Cargo.toml
wireguard-control/: Cargo.toml
