[package]
name = "innernet-client"
version = "1.6.2"
edition = "2021"

[dependencies]
anyhow = "1"
colored = "2"
clap = { version = "4.3", features = ["derive", "wrap_help"] }
clap_complete = "4.3"
dialoguer = { version = "0.10", default-features = false }
hostsfile = { path = "../hostsfile" }
indoc = "2.0.1"
ipnet = { version = "2.4", features = ["serde"] }
log = "0.4"
regex = { version = "1", default-features = false, features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { path = "../shared", default-features = false }
ureq = { version = "2", default-features = false, features = ["json"] }
wireguard-control = { path = "../wireguard-control" }

[dev-dependencies]
once_cell = "1.17.1"
tempfile = "3"

[features]
selinux = ["hostsfile/selinux"]
