[package]
name = "innernet-server"
version = "1.6.3"
edition = "2021"

[features]
v6-test = []

[dependencies]
anyhow = "1"
bytes = "1"
colored = "2"
dialoguer = { version = "0.10", default-features = false }
hyper = { version = "0.14", default-features = false, features = [
  "http1",
  "server",
  "runtime",
  "stream",
] }
indoc = "2.0.1"
ipnet = { version = "2.4", features = ["serde"] }
libc = "0.2"
libsqlite3-sys = "0.26"
log = "0.4"
once_cell = "1.17.1"
parking_lot = "0.12"
pretty_env_logger = "0.4"
publicip = { path = "../publicip" }
regex = { version = "1", default-features = false, features = ["std"] }
rusqlite = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shared = { path = "../shared" }
subtle = "2"
thiserror = "1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread", "time"] }
toml = "0.8.10"
url = "2"
wireguard-control = { path = "../wireguard-control" }

[target.'cfg(target_os = "linux")'.dependencies]
socket2 = { version = "0.5.2", features = ["all"] }

# Workaround for https://github.com/rusqlite/rusqlite/issues/914
[target.'cfg(target_env = "musl")'.dependencies]
rusqlite = { version = "0.29", features = ["bundled"] }

[dev-dependencies]
anyhow = "1"
tempfile = "3"
